<resources>
    <string name="app_name">随手快递</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="describe1">还没有帐号，</string>
    <string name="describe2">去注册 ></string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="set_receive_time">多久以后取货</string>
    <string name="set_goods_weight">物品重量</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="viewpager_indicator">%1$d/%2$d</string>
</resources>
